# prescription-automation

./: README.md  app.py  cdk.json  pyproject.toml
prescription_automation/: prescription_automation_stack.py
resources/: prescription-automation.py
tests/unit/: test_prescription_automation_stack.py
